created functions for backup settings synchronization with ui and files

--- a/visuals/GUI_BASE.ui
+++ b/visuals/GUI_BASE.ui
@@ -2470,7 +2470,7 @@ QPushButton:pressed {
                               </widget>
                              </item>
                              <item>
-                              <widget class="QCheckBox" name="checkBox">
+                              <widget class="QCheckBox" name="backupCheckBox">
                                <property name="autoFillBackground">
                                 <bool>false</bool>
                                </property>
