--- a/visuals/GUI_BASE.ui
+++ b/visuals/GUI_BASE.ui
@@ -1632,7 +1632,7 @@ QPushButton:pressed {
 color: rgb(85, 170, 255);</string>
                   </property>
                   <property name="currentIndex">
-                   <number>2</number>
+                   <number>3</number>
                   </property>
                   <widget class="QWidget" name="page_home">
                    <layout class="QVBoxLayout" name="verticalLayout_10">
@@ -2759,7 +2759,7 @@ border-radius: 5px;</string>
                          <property name="frameShadow">
                           <enum>QFrame::Raised</enum>
                          </property>
-                         <layout class="QHBoxLayout" name="horizontalLayout_13">
+                         <layout class="QHBoxLayout" name="horizontalLayout_11">
                           <item>
                            <spacer name="horizontalSpacer_2">
                             <property name="orientation">
@@ -2772,6 +2772,42 @@ border-radius: 5px;</string>
                              </size>
                             </property>
                            </spacer>
+                          </item>
+                          <item>
+                           <widget class="QPushButton" name="disconnectBtn">
+                            <property name="enabled">
+                             <bool>true</bool>
+                            </property>
+                            <property name="minimumSize">
+                             <size>
+                              <width>100</width>
+                              <height>30</height>
+                             </size>
+                            </property>
+                            <property name="font">
+                             <font>
+                              <pointsize>9</pointsize>
+                             </font>
+                            </property>
+                            <property name="styleSheet">
+                             <string notr="true">QPushButton {
+	border: 2px solid rgb(52, 59, 72);
+	border-radius: 5px;	
+	background-color: rgb(52, 59, 72);
+}
+QPushButton:hover {
+	background-color: rgb(57, 65, 80);
+	border: 2px solid rgb(61, 70, 86);
+}
+QPushButton:pressed {	
+	background-color: rgb(35, 40, 49);
+	border: 2px solid rgb(43, 50, 61);
+}</string>
+                            </property>
+                            <property name="text">
+                             <string>Desconectar</string>
+                            </property>
+                           </widget>
                           </item>
                           <item>
                            <widget class="QPushButton" name="connectBtn">
