--- a/visuals/GUI_BASE.ui
+++ b/visuals/GUI_BASE.ui
@@ -2119,7 +2119,7 @@ QHeaderView::section:vertical
                                    <enum>Qt::SolidLine</enum>
                                   </property>
                                   <property name="sortingEnabled">
-                                   <bool>true</bool>
+                                   <bool>false</bool>
                                   </property>
                                   <property name="wordWrap">
                                    <bool>true</bool>
@@ -2504,7 +2504,7 @@ QHeaderView::section:vertical
                                    <enum>Qt::SolidLine</enum>
                                   </property>
                                   <property name="sortingEnabled">
-                                   <bool>true</bool>
+                                   <bool>false</bool>
                                   </property>
                                   <property name="wordWrap">
                                    <bool>true</bool>
