--- a/visuals/GUI_BASE.ui
+++ b/visuals/GUI_BASE.ui
@@ -1632,7 +1632,7 @@ QPushButton:pressed {
 color: rgb(210, 210, 210);</string>
                   </property>
                   <property name="currentIndex">
-                   <number>5</number>
+                   <number>1</number>
                   </property>
                   <widget class="QWidget" name="page_nodes_centre">
                    <layout class="QVBoxLayout" name="verticalLayout_26">
@@ -2558,7 +2558,7 @@ QHeaderView::section:vertical
                     </item>
                    </layout>
                   </widget>
-                  <widget class="QWidget" name="page_home">
+                  <widget class="QWidget" name="page_info_panel">
                    <layout class="QVBoxLayout" name="verticalLayout_10">
                     <property name="leftMargin">
                      <number>0</number>
